fix: update styling and markup to match design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="scribble">XOXO</div>
         <span class="emoji-stage" id="face"></span>
         <h1>will you <br> be my <br> valentine?</h1>
-        <p id="beg-text">hmm...?</p>
+        <p id="beg-text" style="font-size: 1.2rem;">hmm...?</p>
         
         <div class="btn-wrap">
             <button class="yes-btn" onclick="stepOne()">YES!</button>
@@ -26,7 +26,7 @@
             <h2 style="margin: 0 0 15px 0;">sure?? 🤨</h2>
             <button class="yes-btn" onclick="stepTwo()">LAGIII</button>
             <br><br>
-            <button class="back-btn" onclick="hideAll()">aysa...</button>
+            <button onclick="hideAll()" style="font-size: 1rem; color: #555;">aysa...</button>
         </div>
     </div>
 
@@ -35,14 +35,14 @@
             <h2 style="margin: 0 0 15px 0;">real??</h2>
             <button class="yes-btn" onclick="finish()">YES</button>
             <br><br>
-            <button class="back-btn" onclick="hideAll()">actually nvm</button>
+            <button onclick="hideAll()" style="font-size: 1rem; color: #555;">actually nvm</button>
         </div>
     </div>
 
     <div id="final-screen">
         <span style="font-size: 10rem;">😉</span>
-        <h1 style="color: white; font-size: 2rem;">kita ta later sa mall❤️</h1>
-        <p style="color: white; font-size: 1.8rem;">5pm</p>
+        <h1 style="color: white; font-size: 2rem;">kita ta later sa mall❤</h1>
+        <p style="color: white; font-size: 1.8rem;">5pm </p>
     </div>
 
     <script src="script.js"></script>
